--- a/css/styles.css
+++ b/css/styles.css
@@ -585,24 +585,18 @@ border: 1px solid #fff;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background-color: #2E2F42;
     padding-left: 16px;
+    background-color: transparent;
+    font-size: 12px;
+    line-height: 2;
+    letter-spacing: 0.04em;
+    color: #ffffff;
 }
 
-.subscribe-email {
-    border: 1px solid #fff;
-    border-radius: 4px;
-    width: 264px;
-    height: 40px;
-    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
-    background-color: #2E2F42;
-    padding-left: 16px;
-}
+
 
 .subscribe-email::placeholder {
-    font-weight: 400;
-        font-size: 12px;
-        line-height: 2;
-        letter-spacing: 0.04em;
-        color: #fff;
+
+    color: #ffffff;
 }
 
 
@@ -621,8 +615,7 @@ border: 1px solid #fff;
         display: flex;
         flex-direction: row;
         justify-content: center;
-        gap: 16px;
-        width: 165px;
+        min-width: 165px;
         height: 40px;
         border: none;
         border-radius: 4px;
@@ -638,6 +631,7 @@ border: 1px solid #fff;
 
 .icon-Frame{
     fill: #fff;
+    margin-left: 16px;
     
 }
 .modal-overlay {
@@ -653,7 +647,8 @@ border: 1px solid #fff;
     align-items: center;
     opacity: 0;
     pointer-events: none;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-overlay .is-open{
@@ -666,12 +661,15 @@ border: 1px solid #fff;
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
-    background-color: #fff;
     width: 408px;
     min-height: 584px;
-    padding: 61px 24px;
+    padding: 72px 24px 24px 24px;
     visibility: hiden;
-}
+    background: #fcfcfc;
+    border-radius: 4px;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}   
 
 .form {
 
@@ -696,19 +694,29 @@ border: 1px solid #fff;
 
 .close-btn {
     position: absolute;
+    cursor: pointer;
     border: #E7E9FC;
-    top: 20px;
+    top: 24px;
     right: 24px;
+    width: 24px;
+    height: 24px;
     border-radius: 50%;
+    display: flex;
+        align-items: center;
+        justify-content: center;
     background-color: #e7e9fc;;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
     transition-property: ;
+    padding: 0;
 }
 
 
 .close-btn:hover,
-.close-btn:focus {
-    background-color: #404BBF
+ .close-btn:focus {
+    background-color: #404BBF;
+    border: none;
 }
 
 .form-close-icon {
@@ -718,7 +726,10 @@ border: 1px solid #fff;
 
 
 
-.close-btn:hover .form-close-icon,
+.close-btn:hover .form-close-icon {
+    fill: #FFFFFF
+}
+
 .close-btn:focus .form-close-icon {
     fill: #FFFFFF
 }
@@ -742,14 +753,14 @@ border: 1px solid #fff;
     margin-bottom: 4px;
     font-weight: 400;
         font-size: 12px;
-        line-height: 1.16667;
         letter-spacing: 0.04em;
         color: #8e8f99;
+        line-height: 1.17;
    
 }
 
 .form-field {
-    margin-bottom: 8px;
+    margin-bottom: 16px;
 }
 
 .form-input {
@@ -760,6 +771,8 @@ border: 1px solid #fff;
     padding: 11px 16px;
     outline: transparent;
     padding-left: 38px;
+    background-color: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-wrapper {
@@ -774,6 +787,7 @@ border: 1px solid #fff;
     transform: translateY(-50%);
     pointer-events: none;
     fill: #2E2F42
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
     
 }
@@ -801,14 +815,15 @@ border: 1px solid #fff;
     border-radius: 4px;
     font-weight: 400;
     font-size: 12px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     resize: none;
     outline: transparent;
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     ;
     transition-property: border-color;
-    color: #2E2F42;
+    color: rgba(46, 47, 66, 0.4);
+    background-color: transparent;
 }
 
 .form-comment::placeholder {
@@ -822,7 +837,7 @@ border: 1px solid #fff;
 .form-agreement-text {
 font-weight: 400;
     font-size: 12px;
-    line-height: 1.16667;
+    line-height: 1.17;
     letter-spacing: 0.04em;
     color: #8e8f99;
 }
@@ -833,15 +848,18 @@ font-weight: 400;
 }
 
 .form-checkbox{
-    width: 20px;
-    height: 20px;
+    width: 16px;
+    height: 16px;
     border-radius: 2px;
     border: 1px solid rgba(46, 47, 66, 0.4);
     display: inline-flex;
     justify-content: center;
     align-items: center;
     margin-right: 8px;
-
+    fill: transparent;
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-checkbox-icon {
@@ -849,6 +867,12 @@ font-weight: 400;
    opacity: 0;
    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
    transition-property: opacity;
+}
+
+.input[type='checkbox']:checked+.form-checkbox {
+    background-color: #404bbf;
+    border: none;
+    fill: #F4F4FD;
 }
 
 input[type='checkbox']:checked
@@ -860,14 +884,13 @@ input[type='checkbox']:checked
 }
 
 input[type='checkbox']:checked
-+ .form-agreement-text 
-.form-checkbox 
++.form-agreement-text .form-checkbox 
 .form-checkbox-icon {
     opacity: 1;
 }
 
-input[type='checkbox']:focus-visible 
-+ .form-agreement-text 
+input[type='checkbox']:focus-visible
++.form-agreement-text 
 .form-checkbox {
     outline: 2px solid #404BBF;
     outline-offset: 2px;
