--- a/css/styles.css
+++ b/css/styles.css
@@ -629,7 +629,7 @@ border: 1px solid #fff;
     background: #404BBF;
 }
 
-.icon-Frame{
+.icon-frame{
     fill: #fff;
     margin-left: 16px;
     
@@ -647,7 +647,7 @@ border: 1px solid #fff;
     align-items: center;
     opacity: 0;
     pointer-events: none;
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
     visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -713,7 +713,11 @@ border: 1px solid #fff;
 }
 
 
-.close-btn:hover,
+.close-btn:hover{
+        background-color: #404BBF;
+        border: none;
+    }
+
  .close-btn:focus {
     background-color: #404BBF;
     border: none;
@@ -727,11 +731,11 @@ border: 1px solid #fff;
 
 
 .close-btn:hover .form-close-icon {
-    fill: #FFFFFF
+    fill: #FFFFFF;
 }
 
 .close-btn:focus .form-close-icon {
-    fill: #FFFFFF
+    fill: #FFFFFF;
 }
 
 .form-name {
@@ -760,7 +764,7 @@ border: 1px solid #fff;
 }
 
 .form-field {
-    margin-bottom: 16px;
+    margin-bottom: 8px;
 }
 
 .form-input {
@@ -786,7 +790,7 @@ border: 1px solid #fff;
     left: 16px;
     transform: translateY(-50%);
     pointer-events: none;
-    fill: #2E2F42
+    fill: #2E2F42;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
     
@@ -857,7 +861,8 @@ font-weight: 400;
     align-items: center;
     margin-right: 8px;
     fill: transparent;
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transition: 
+        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         border 250ms cubic-bezier(0.4, 0, 0.2, 1),
         fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -869,7 +874,7 @@ font-weight: 400;
    transition-property: opacity;
 }
 
-.input[type='checkbox']:checked+.form-checkbox {
+.input[type='checkbox']:checked .form-checkbox {
     background-color: #404bbf;
     border: none;
     fill: #F4F4FD;
