--- a/css/styles.css
+++ b/css/styles.css
@@ -767,6 +767,10 @@ border: 1px solid #fff;
     margin-bottom: 8px;
 }
 
+.form-field-comment {
+    margin-bottom: 16px;
+}
+
 .form-input {
     width: 100%;
     height: 40px;
