--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+.hide {
+    display: none;
+}
+
+
 /* font-family: "Roboto", sans-serif;
 font-family: "Raleway", sans-serif; */
 *,
@@ -15,6 +20,8 @@ body {
 
 img {
     display: block;
+    max-width: 100%;
+    height: auto;
 }
 
 ul, ol{
@@ -105,9 +112,17 @@ a {
     flex-direction: row;
 }
 
+
+
 .nav-list {
-    display: flex;
-    gap: 40px;
+    display: none;
+}
+
+@media only screen and (min-width: 768px) {
+    .nav-list {
+        display: flex;
+        gap: 40px;
+        }
 }
 
 .nav-link:hover,
@@ -123,34 +138,78 @@ a {
 }
 
 .contacts-link {
-    font-size: 16px;
+    font-weight: 400;
+    font-size: 12px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
     display: block;
-    padding: 24px 0;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media only screen and (min-width: 1158px) {
+.contacts-link {
+    font-size: 16px;
+    padding: 24px 0;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+}
+
 .contacts-list {
+    display: none;
+}
+
+@media only screen and (min-width: 768px) {
+    .contacts-list {
     display: flex;
+    flex-direction: column;
+    gap: 12px; 
+    }
+}
+
+@media only screen and (min-width: 1158px) {
+    .contacts-list {
+    flex-direction: row;
     gap: 40px;
+    }
+}
+
+.heroicon {
+        width: 24px;
+        height: 24px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        place-self: end;
+        margin-top: 12px;
+        margin-right: 12px;
+        margin-bottom: 12px;
+        margin-left: auto;
+}
+
+@media only screen and (min-width: 768px) {
+    .heroicon {
+    display: none;
+    }
 }
 
 .page-footer {
-    
     background: #2e2f42;
     padding: 100px 0;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: baseline;
 }
 
+@media only screen and (min-width: 1158px) {
+    .page-footer {
+    padding: 96px 0; 
+    }
+}
+
+
 .top {
-    padding: 188px 0;
+    padding: 96px 0;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7),
                 rgba(46, 47, 66, 0.7)),
-            url("../images/people-office.jpg");
+            url("../images/off_mob@1x.jpg");
     background-repeat: no-repeat;
     background-position: 50% 50%;
     background-size: cover;
@@ -158,22 +217,87 @@ a {
     margin: auto;
 }
 
+@media only screen and (min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+    .top{
+    background-image: 
+        linear-gradient(rgba(46, 47, 66, 0.7),
+                rgba(46, 47, 66, 0.7)),
+            url("../images/off_mob@2x.jpg");
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .top {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+                rgba(46, 47, 66, 0.7)),
+                url("../images/off_tabl@1x.jpg");
+
+    }
+}
+
+@media only screen and (min-width: 768px) and (min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+    .top {
+        background-image:
+        linear-gradient(rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)),
+        url("../images/off_tabl@2x.jpg");
+    }
+}
+
+@media only screen and (min-width: 1158px) {
+    .top{
+        padding: 120px 0;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)),
+        url("../images/off_desk@1x.jpg");
+
+    }
+}
+
+@media only screen and (min-width: 1158px) and (min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+    .top {
+        background-image:
+            linear-gradient(rgba(46, 47, 66, 0.7),
+                rgba(46, 47, 66, 0.7)),
+            url("../images/off_desk@2x.jpg");
+    }
+}
+
 .top-container {
     max-width: 1440px;
     margin: o auto;
 }
 
+
 .top-title {
     font-weight: 700;
-    font-size: 56px;
-    line-height: 1.07;
+    font-size: 36px;
+    line-height: 40px;
     letter-spacing: 0.02em;
     text-align: center;
     color: #fff;
-    max-width: 496px;
-    margin-bottom: 48px;
+    max-width: 216px;
+    margin-bottom: 72px;
     margin-left: auto;
     margin-right: auto;
+}
+
+@media only screen and (min-width: 768px) {
+    .top-title {
+        font-size: 56px;
+        max-width: 496px;
+        margin-bottom: 36px;
+        line-height: 60px;
+    }
+}
+
+@media only screen and (min-width: 1158px) {
+    .top-title {
+        margin-bottom: 48px;
+    }
 }
 
 .top-button {
@@ -196,9 +320,11 @@ a {
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media only screen and (hover: hover) {
 .top-button:hover,
 .top-button:focus {
 background-color: #404BBF
+}
 }
 
 .button-link {
@@ -209,24 +335,59 @@ background-color: #404BBF
     color: #fff;
     
 }
-.benefits-title{
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
+
+.benefits-title {
+    font-weight: 700;
+    font-size: 32px;
+    line-height: 40px;
     letter-spacing: 0.02em;
     color: #2e2f42;
     display: block;
-    width: 264px;
+    width: 288px;
     margin-bottom: 8px;
+    text-align: center;
 }
 
-.benefits-text{
+@media only screen and (min-width: 768px) {
+    .benefits-title {
+        width: 264px;
+        text-align: start;
+        font-size: 36px;
+
+    }
+}
+
+@media only screen and (min-width: 1158px) {
+    .benefits-title {
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 24px;
+    }
+}
+
+.benefits-text {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.02em;
+    color: #434455;
+    display: block;
+}
+
+@media only screen and (min-width: 1158px) {
+    .benefits-text {
+    font-weight: 400;
+    }
+}
+/*
+.benefits-text {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
     display: block;
 }
+    */
 
 .team{
     background: #f4f4fd;
@@ -243,6 +404,7 @@ background-color: #404BBF
     text-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25);
     margin-bottom: 72px;
 }
+
 
 .team-name {
     font-weight: 500;
@@ -273,6 +435,25 @@ background-color: #404BBF
     margin-bottom: 72px;
 }
 
+.portfolio-picture{
+   width: 288px;
+   height: 280px;
+}
+
+@media only screen and (min-width: 768px) {
+    .portfolio-picture {
+            width: 356px;
+            height: 300px;
+        }
+}
+
+@media only screen and (min-width: 1158px) {
+    .portfolio-picture {
+        width: 360px;
+        height: 300px;
+    }
+}
+
 .portfolio-name {
     font-weight: 500;
     font-size: 20px;
@@ -301,21 +482,27 @@ background-color: #404BBF
 
 }
 
-.team-menu {
-    background-color: #FFFFFF;
-    display: block;
-    align-items: center;
-    
-}
-
 .team-menu img {
-    object-fit: fill;
+    width: 100%;
+    height: auto;
 }
 
 .container {
-    max-width: 1158px;
-    padding: 0 15px;
+    max-width: 320px;
+    padding: 0 16px;
     margin: 0 auto;
+}
+
+@media only screen and (min-width: 768px){
+    .container {
+        max-width: 736px;
+    }
+}
+
+@media only screen and (min-width: 1158px) {
+    .container {
+        max-width: 1128px;
+    }
 }
 
 .header-container {
@@ -325,24 +512,59 @@ background-color: #404BBF
 }
 
 .benefits {
-    padding: 120px 0;
+    padding: 96px 0;
 }
 
-.benefits-container {
-
+@media only screen and (min-width: 1158px) {
+    .benefits {
+            padding: 120px 0;
+        }
 }
 
 .benefits-list {
     display: flex;
-    gap: 24px;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+
+    gap: 72px;
 }
 
+@media only screen and (min-width: 768px) {
+    .benefits-list {
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 72px 24px;
+        }
+}
+
+@media only screen and (min-width: 1158px) {
+    .benefits-list {
+            gap: 24px;
+        }
+    
+}
+
+@media only screen and (min-width: 768px) {
+    .benefits-list .benefits-tipe {
+        width: calc((100% - 72px)/2);
+    }
+}
+
+@media only screen and (min-width: 1158px) {
 .benefits-list .benefits-tipe {
     width: calc((100% - 72px)/4);
 }
+}
 
 .team {
+    padding: 96px 0;
+}
+
+@media only screen and (min-width: 1158px) {
+.team {
     padding: 120px 0;
+}
 }
 
 .team-container {
@@ -352,18 +574,49 @@ background-color: #404BBF
 
 .team-list {
     display: flex;
-        gap: 24px;
-        align-items: center;
+    flex-direction: column;
+    gap: 72px;
 }
 
+@media only screen and (min-width: 768px) {
+    .team-list {
+        flex-direction: row;
+        flex-wrap: wrap;
+        column-gap: 24px;
+        row-gap: 64px;
+    }
+}
+
+@media only screen and (min-width: 1158px) {
+    .team-list {
+        
+        gap: 24px;
+        align-items: center;
+    }
+}
 
 .team-menu {
 
     background: #ffffff;
-    width: calc((100% - 72px)/4);
     border-radius: 0px 0px 4px 4px;
-    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+        box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    
 }
+
+
+@media only screen and (min-width: 768px) {
+    .team-menu {
+        width: calc((100% - 24px) / 2);
+    }
+}
+
+@media only screen and (min-width: 1158px) {
+.team-menu {
+    width: calc((100% - 72px) / 4);
+}
+}
+
+
 
 .team-part {
     padding: 32px 0;
@@ -385,49 +638,99 @@ background-color: #404BBF
     align-items: center;
 }
 
+@media only screen and (max-width: 1158px) {
+.portfolio-set {
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0px 2px 1px 0px #2E2F4214;
+}
+}
+
+@media only screen and (min-width: 768px) {
+.portfolio-set {
+    width: calc((100% - 24px) / 2);
+}
+}
+
+@media only screen and (min-width: 1158px) {
 .portfolio-set {
     width: calc((100% - 48px) / 3);
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+}
 
 .portfolio-set img {
-    width: 360px;
-    height: 300px;
-    object-fit: contain;
+
+    object-fit: fill;
     position: relative;
         overflow: hidden;
 }
 
+@media only screen and (hover: hover) {
 .portfolio-set:hover {
     box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
 }
 
 .portfolio-menu {
     display: flex;
-    flex-wrap: wrap;
-    column-gap: 24px;
-    row-gap: 48px;
+    flex-direction: column;
+    gap: 48px;
+   
 
+}
+
+@media only screen and (min-width: 768px) {
+    .portfolio-menu {
+        flex-direction: row;
+        flex-wrap: wrap;
+        column-gap: 24px;
+        row-gap: 40px;
+    }
 }
 
 .portfolio-text {
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
+
 }
+
 
 .footer-container {
     display: flex;
-    align-items: baseline;
+    flex-direction: column;
+    gap: 72px;
+
 }
 
-.page-footer .footer-container {
+
+@media only screen and (min-width: 768px) {
+    .footer-container {
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 0;
+        }
+}
+
+@media only screen and (min-width: 1158px) {
+.footer-container { 
+    flex-wrap: nowrap;
+    align-items: baseline;
+}
 }
 
 .footer-logo {
-    display: inline-block;
+    display: flex;
     margin-bottom: 16px;
+    justify-content: center;
 }
+
+@media only screen and (min-width: 768px) {
+    .footer-logo {
+        display: block;
+        }
+    }
 
 .visually-hidden {
     position: absolute;
@@ -461,9 +764,11 @@ background-color: #404BBF
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+@media only screen and (hover: hover) {
 .social-link:hover,
 .social-link:focus {
     background-color: #404BBF
+}
 }
 
 .team-socicon {
@@ -472,10 +777,11 @@ height: 40px;
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.soc-icon {
-
+.benefits-icon {
+    display: none;
 }
 
+@media only screen and (min-width: 1158px) {
 .benefits-icon {
     border: 1px solid #8e8f99;
         border-radius: 4px;
@@ -487,18 +793,34 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
             justify-content: center;
             margin-bottom: 8px;
 }
+}
+.footer-socials {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
 
 .footer-sm {
+    text-align: center;
     font-weight: 500;
         font-size: 16px;
+        
+        
         line-height: 1.5;
         letter-spacing: 0.02em;
         color: #FFFFFF;
-        margin-bottom: 16px;
+}
+
+@media only screen and (min-width: 768px) {
+.footer-sm {
+    text-align: left;
+}
 }
 
 .footer-social {
     display: flex;
+    align-items: center;
+        justify-content: center;
     gap: 16px;
 }
 
@@ -518,46 +840,66 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+
+.portfolio {
+    padding-bottom: 96px;
+    padding-top: 96px;
+}
+
+@media only screen and (min-width: 1158px) {
 .portfolio {
     padding-bottom: 120px;
     padding-top: 120px;
 }
+}
 
 .portfolio-img {
     position: relative;
-overflow: hidden;
+    overflow: hidden;
 }
-
+@media only screen and (min-width: 1158px) {
 .portfolio-set:hover .overlay{
     transform: translateY(0%);
 }
+}
 
+@media only screen and (min-width: 768px) {
+    .footer-first {
+    margin-right: 24px;
+    }
+}
+
+@media only screen and (min-width: 1158px) {
 .footer-first {
     margin-right: 120px;
+}
 }
 
 .footer-social-link { 
     width: 100%;
     height: 100%; 
     background-color: #4d5ae5;
-        border-radius: 50%;
-        display: flex;
-            align-items: center;
-            justify-content: center;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 40px;
     height: 40px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+
+@media only screen and (hover: hover) {
 .footer-social-link:hover,
 .footer-social-link:focus {
     background-color: #31d0aa;
 }
+}
 
 .footer-team-socicon {
     width: 40px;
-        height: 40px;
-        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    height: 40px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .soc-icon {
@@ -565,7 +907,21 @@ overflow: hidden;
 }
 
 .footer-subscribe {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+}
+
+@media only screen and (min-width: 768px) and (max-width: 1157px) {
+    .footer-subscribe {
+        margin-top: 72px;
+    }
+}
+
+@media only screen and (min-width: 1158px) {
+.footer-subscribe {
     margin-left: 80px;
+}
 }
 
 .subscribe-lable {
@@ -574,13 +930,25 @@ border-color: #4D5AE5;
 
 .subscribe-form{
     display: flex;
-    gap:24px
+    flex-direction: column;
+    gap: 16px;
+    align-items: center;
+    
 }
 
+@media only screen and (min-width: 768px) {
+.subscribe-form {
+    display: flex;
+    flex-direction: row;
+    gap: 24px
+}
+}
+
+
 .subscribe-email {
-border: 1px solid #fff;
+    border: 1px solid #fff;
     border-radius: 4px;
-    width: 264px;
+    width: 288px;
     height: 40px;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
     background-color: #2E2F42;
@@ -592,17 +960,18 @@ border: 1px solid #fff;
     color: #ffffff;
 }
 
+@media only screen and (min-width: 768px) {
+.subscribe-email {
+    width: 264px; 
+}
+}
+
 
 
 .subscribe-email::placeholder {
-
     color: #ffffff;
 }
 
-
-.subscribe-lable:focus {
-    
-}
 
 .subscribe-button {
     background: #4d5ae5;
@@ -615,7 +984,7 @@ border: 1px solid #fff;
         display: flex;
         flex-direction: row;
         justify-content: center;
-        min-width: 165px;
+        width: 165px;
         height: 40px;
         border: none;
         border-radius: 4px;
@@ -656,25 +1025,28 @@ border: 1px solid #fff;
     pointer-events: auto;
 }
 
-.modal{
+.modal {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
-    width: 408px;
-    min-height: 584px;
+    width: 288px;
+    min-height: 623px;
     padding: 72px 24px 24px 24px;
     visibility: hiden;
     background: #fcfcfc;
     border-radius: 4px;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}   
-
-.form {
-
 }
 
+@media only screen and (min-width: 768px) {
+    .modal {
+        width: 408px;
+        min-height: 584px;
+    }
+}
+ 
 .close {
     position: absolute;
     border-radius: 4px;
@@ -712,17 +1084,19 @@ border: 1px solid #fff;
     padding: 0;
 }
 
-
+@media only screen and (hover: hover) {
 .close-btn:hover {
     background-color: #404BBF;
     border: none;
     }
+}
 
+@media only screen and (focus: focus) {
  .close-btn:focus {
     background-color: #404BBF;
     border: none;
 }
-
+}
 .form-close-icon {
     fill: #2E2F42;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -746,10 +1120,6 @@ border: 1px solid #fff;
     text-align: center;
     color: #2e2f42;
     margin-bottom: 16px;
-}
-
-.form {
-    
 }
 
 .form-label {
@@ -928,7 +1298,145 @@ input[type='checkbox']:focus-visible
 
 }
 
+@media only screen and (hover: hover) {
 .form-button:hover,
 .form-button:focus {
     background-color: #404BBF
+}
+}
+
+
+
+.modal-menu {
+background-color: #fff;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    display: flex;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-menu.is-open {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+@media screen and (min-width: 768px) {
+    .modal-menu {
+        display: none;
+    }
+}
+
+.close-btn-menu {
+    position: absolute;
+    cursor: pointer;
+    border: #E7E9FC;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #ffff;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition-property: background-color, border;
+    padding: 0;
+}
+.header-nav-menu {
+    margin-bottom: auto;
+
+}
+
+.nav-list-menu {
+display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+.nav-link-menu {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 40px;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
+    display: block;
+    position: relative;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-link-menu.current {
+    position: relative;
+    color: #404bbf;
+}
+
+.contacts-menu {
+    margin-bottom: auto;
+    font-style: normal;
+}
+
+.contacts-list-menu {
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.contacts-link-menu {
+    font-size: 20px;
+    letter-spacing: 0.02em;
+    color: #434455;
+    display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contacts-link-menu.current {
+    position: relative;
+        color: #404bbf;
+}
+
+.menu-social {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    gap: auto;
+}
+
+.menu {
+    position: relative;
+    padding-top: 72px;
+    padding-bottom: 40px;
+    padding-left: 16px;
+    padding-right: 16px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
+
+.menu-social-link {
+    width: 100%;
+        height: 100%;
+        background-color: #4d5ae5;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 40px;
+        height: 40px;
+
+}
+
+.menu-team-socicon {
+    width: 40px;
+        height: 40px;
 }
